force-app/main/default/objects/SCOC__FraudList__c/SCOC__FraudList__c.object-meta.xml
<CustomObject>
    <description>Response Entity Fraud List</description>
    <label>Fraud</label>
    <nameField>
        <displayFormat>FL-{00000}</displayFormat>
        <label>Fraud Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fraud</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>