force-app/main/default/objects/SCOC__FraudList__c/fields/SCOC__AddressCount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__AddressCount__c</fullName>
    <description>Number of times Address has been used in the last 90-120 days.</description>
    <label>Address Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>