force-app/main/default/objects/SCOC__FraudList__c/fields/SCOC__Code__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Code__c</fullName>
    <description>Code</description>
    <label>Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>