force-app/main/default/objects/SCOC__FraudList__c/fields/SCOC__CodeText__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CodeText__c</fullName>
    <description>CodeText</description>
    <label>CodeText</label>
    <length>150</length>
    <type>Text</type>
</CustomField>