force-app/main/default/objects/SCOC__FraudList__c/fields/SCOC__ProductStatus__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ProductStatus__c</fullName>
    <description>Product status</description>
    <label>Product Status</label>
    <length>2</length>
    <type>Text</type>
</CustomField>