force-app/main/default/objects/SCOC__FraudList__c/fields/SCOC__RecordType__c.field-meta.xml
<CustomField>
    <fullName>SCOC__RecordType__c</fullName>
    <description>Fraud Record Type</description>
    <label>Record Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>