force-app/main/default/objects/SCOC__FraudList__c/fields/SCOC__VendorAlertCondition__c.field-meta.xml
<CustomField>
    <fullName>SCOC__VendorAlertCondition__c</fullName>
    <description>Vendor alert condition</description>
    <label>Vendor Alert Condition</label>
    <length>1</length>
    <type>Text</type>
</CustomField>