force-app/main/default/objects/SCOC__FraudList__c/fields/SCOC__VendorAlertMessageType__c.field-meta.xml
<CustomField>
    <fullName>SCOC__VendorAlertMessageType__c</fullName>
    <description>Vendor alert message type</description>
    <label>Vendor Alert Message Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>