force-app/main/default/objects/SCOC__FraudList__c/fields/SCOC__VendorAlertType__c.field-meta.xml
<CustomField>
    <fullName>SCOC__VendorAlertType__c</fullName>
    <description>Vendor alert type</description>
    <label>Vendor Alert Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>